# wiretapp

./: .env.example  .gitignore  README.md  env.example  pyproject.toml
collector/: Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt  schemas.py
wiretapp/: __init__.py  sdk.py
