[project]
name = "wiretapp"
version = "0.1.0"
description = "a tool to get model telemetry from any OpenAI-like API during chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kafka-python>=2.2.6",
    "openai>=1.77.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.8",
    "requests>=2.25.0",
]
